# buildup

./: .env  .gitignore  README.md  database.py  main.py  models.py  nano start_server.sh  pyproject.toml  requirements.txt  schemas.py  start_ngrok.bat  start_ngrok.bat - 바로 가기.lnk  start_server.sh  서버 이용법.txt  서버 자동화.txt  서버여는 법.txt
ShowMeTheColor/src/personal_color_analysis/: personal_color.py
SkinAnalysis/: aimodel.py  label_encoder_v3_measurements_only.joblib  target_measurement_scaler.joblib
routes/: analysis.py  chatbot.py  upload.py  user.py
